<resources>
    <string name="app_name">QUP</string>
    <string name="title_queue_detail">Queue Detail</string>
    <string name="title_queue_create">Create New Queue</string>
    <string name="title_queue_participate">Participate in Queue</string>
    <string name="text_name">Name</string>
    <string name="text_token">Token (used to protect your queue)</string>
    <string name="text_create">Create Queue</string>
    <string name="text_create_error">Please fill out all the fields</string>
    <string name="text_remaining">Participants left:</string>
    <string name="text_before">Participants before you:</string>
    <string name="text_turn">It\'s your turn!</string>
    <string name="text_missed">You are not in queue, missed your turn?</string>
    <string name="text_queue_id">Queue</string>
    <string name="text_scan">Scan Queue QR</string>
    <string name="text_scan_error">Scanning cancelled</string>
    <string name="text_participate">Join Queue</string>
    <string name="text_next">Request next participant</string>
    <string name="hint_token">Long click to auto-generate</string>
    <string name="hint_limit">Queue limit (Optional)</string>
    <string name="hint_name">Name this queue</string>
    <string name="hint_id">Queue Id</string>
    <string name="clipboard">Copied Queue Id</string>
    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_text">Are you sure you want to delete this contact?</string>
    <string name="queue_qr">Queue QR</string>
    <string name="current_qr">Current Id</string>
    <string name="participant_qr">Your Id</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_current">No current participant</string>
</resources>
