<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin">

    <TextView
        android:text="@string/text_queue_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewQueueId"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextQueueName"
        android:hint="@string/hint_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextQueueId"
        android:hint="@string/hint_id" />

    <Button
        android:text="@string/text_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonScan" />

    <Button
        android:text="@string/text_participate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonParticipate" />
</LinearLayout>