<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin">

    <TextView
        android:text="@string/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextName" />

    <TextView
        android:text="@string/text_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewToken"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_token"
        android:ems="10"
        android:id="@+id/editTextToken" />

    <Button
        android:text="@string/text_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreate" />
</LinearLayout>