<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:padding="@dimen/fab_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:text="@string/queue_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewQueueId"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@color/colorAccent" />

        <TextView
            android:text="@string/participant_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewParticipantId"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:id="@+id/queue_qr"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:id="@+id/queue_participant_qr"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/queue_title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context="com.swinburne.timur.qup.QueueDetailFragment"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textAlignment="center" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/queue_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context="com.swinburne.timur.qup.QueueDetailFragment"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="72sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <Button
        android:text="@string/text_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonNextParticipant"
        android:visibility="gone"
        android:textColor="@android:color/white" />

</LinearLayout>

